--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -124,7 +124,36 @@ li:hover {
 #portfolio h2 {
 	text-align: center;
 	margin-bottom: 1em;
+	margin-top: 4em;
 }
+
+button{
+
+border-radius: 60px;
+color: #1D6154;
+background-color: white;
+border: 2px solid #1D6154;
+height: 37px;
+margin-top: 3em;
+margin-bottom: 2em;
+font-weight: bold;
+font-size: 16px;
+padding-left: 20px;
+padding-right: 20px;
+font-family: "syne";
+}
+
+button:hover{
+
+	color: white;
+	background-color: #1D6154;
+}
+
+
+
+
+
+
 .gallery {
 	width: 100%;
 	display: grid;
