--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -206,13 +206,18 @@ li:hover {
   margin-top: 4em;
 }
 
+.filters {
+  text-align: center;
+  margin-bottom: 1em;
+}
+
 button {
   border-radius: 60px;
   color: #1d6154;
   background-color: white;
   border: 1px solid #1d6154;
   height: 37px;
-  margin-top: 3em;
+  margin-top: 1em;
   margin-bottom: 2em;
   margin-left: 0.5em;
   font-weight: bold;
@@ -227,11 +232,9 @@ button:hover {
   color: white;
   background-color: #1d6154;
 }
-button:active{
-
-	color: white;
-	background-color: #1d6154;
-
+button:active {
+  color: white;
+  background-color: #1d6154;
 }
 
 .gallery {
