--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -237,6 +237,7 @@ button:active {
   background-color: #1d6154;
 }
 
+
 .gallery {
   width: 100%;
   display: grid;
@@ -278,6 +279,12 @@ button:active {
   border: none;
   box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
+#forget-password {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: underline;
+}
 
 input[type="submit"] {
   font-family: "Syne";
@@ -288,6 +295,9 @@ input[type="submit"] {
   width: 180px;
   text-align: center;
   border-radius: 60px;
+  height: 37px;
+  
+
 }
 
 footer nav ul {
