--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -5,7 +5,7 @@
 
 html,
 body,
-div,
+/* div, */
 span,
 applet,
 object,
@@ -105,8 +105,12 @@ nav,
 section {
   display: block;
 }
+* {
+  box-sizing: border-box;
+}
 body {
   line-height: 1;
+  background-color: #fffef8;
 }
 
 a {
@@ -123,7 +127,9 @@ a:active {
 a:active {
   color: black;
 }
-
+.article {
+  text-align: justify;
+}
 ol,
 ul {
   list-style: none;
@@ -251,6 +257,7 @@ nav li {
 .active {
   visibility: visible;
 }
+.button,
 button {
   border-radius: 60px;
   color: #1d6154;
@@ -272,7 +279,53 @@ button:hover {
   color: white;
   background-color: #1d6154;
 }
+/* ***************************************** */
+#modale {
+  visibility: hidden;
+  position:fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto; 
+  background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  align-items:center;
+  justify-content: center;
+   margin: auto; 
+}
 
+.modal-gallery {
+  padding: 50px;
+  width: 45%;
+  height: 660px;
+  background-color: white;
+  border-radius: 10px;
+  position: absolute;
+}
+.modal-text{
+display: inline-block;
+position: relative;
+bottom: 260px;
+font-family: "Work sans";
+font-size: 22;
+font-weight:lighter;
+color: black;
+}
+
+.close-modale {
+  color: #ec2b2b;
+  font-size: 22px;
+  font-weight: bold;
+  cursor: pointer;
+  position: absolute;
+  top: 50px;
+  right: 450px;
+
+
+}
+/* ************************************************************** */
 .gallery {
   width: 100%;
   display: grid;
