--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -242,7 +242,7 @@ nav li {
   margin-bottom: 1em;
 }
 
-.user-modifier {
+.user-modify {
   color: black;
   font-size: 14px;
   padding-top: 5px;
@@ -279,52 +279,113 @@ button:hover {
   color: white;
   background-color: #1d6154;
 }
+
 /* ***************************************** */
+
 #modale {
   visibility: hidden;
-  position:fixed;
+  position: fixed;
   z-index: 1;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto; 
+  overflow: auto;
   background-color: rgba(0, 0, 0, 0.4);
   display: flex;
-  align-items:center;
+  align-items: center;
   justify-content: center;
-   margin: auto; 
 }
 
 .modal-gallery {
-  padding: 50px;
-  width: 45%;
-  height: 660px;
+  padding-top: 50px;
+  width: 40%;
+  height: 688px;
   background-color: white;
   border-radius: 10px;
-  position: absolute;
+  position: relative;
 }
-.modal-text{
-display: inline-block;
-position: relative;
-bottom: 260px;
-font-family: "Work sans";
-font-size: 22;
-font-weight:lighter;
-color: black;
+
+.images-container {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 30px;
+  justify-content: space-between;
+  margin: 50px 80px 27px 80px;
+  border-bottom: 1px solid #b3b3b3;
+  padding-bottom: 60px;
+}
+
+.images-container img {
+  width: auto;
+  height: 103px;
+  object-fit: cover;
+}
+
+.modal-text {
+  display: block;
+  margin-bottom: 30px;
+  font-family: "Work Sans";
+  font-size: 26px;
+  font-weight: lighter;
+  color: black;
+  text-align: center;
 }
 
 .close-modale {
-  color: #ec2b2b;
+  color: black;
   font-size: 22px;
   font-weight: bold;
   cursor: pointer;
   position: absolute;
-  top: 50px;
-  right: 450px;
-
-
+  top: 20px;
+  right: 20px;
 }
+/* ************************************************ */
+
+.image-wrapper {
+  position: relative;
+}
+
+.trash-icon {
+  position: absolute;
+  top: 15%;
+  left: 80%;
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+  color: white;
+  font-size: 10px;
+  background-color: black;
+  width: 17px;
+  height: 18px;
+  border-radius: 3px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-underline-offset: inherit;
+}
+.add-photo-button{
+
+  border-radius: 60px;
+  color: white;
+  background-color:#1d6154;
+  height: 37px;
+  font-weight: bold;
+  font-size: 14px;
+  padding: 9px 49px ;
+  font-family: "syne";
+  transition: all 200ms ease-in;
+}
+
+.add-photo-button:hover {
+  color: white;
+  background-color: black;
+}
+
+
+
+
+
 /* ************************************************************** */
 .gallery {
   width: 100%;
